--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -21,10 +21,11 @@
   color: #0d0d0d;
 }
 &__descr {
-  margin-top: 26px;
+  margin-top: 20px;
   font-size: 14px;
   font-weight: 300;
   text-align: center;
+  line-height: 18px;
   color: #0d0d0d;
   a {
     color: #ff0000;
