--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -27,10 +27,11 @@
     display: flex;
     margin-top: 46px;
     justify-content: space-between;
+    align-items: center;
     width: 425px;
   }
     &__icon {
-      width: 106px;
+      width: 108px;
       text-align: center;
       font-size: 14px;
       font-weight: 500;
