--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
   min-height: 650px;
   padding: 21px 0 93px 0;
-  background: url(../../img/bg1.png) center (center/cover) no-repeat;
+  background: url(../img/bg1.png) center (center/cover) no-repeat;
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -25,7 +25,7 @@
   }
   &__icons {
     display: flex;
-    margin-top: 46px;
+    margin-top: 60px;
     justify-content: space-between;
     align-items: center;
     width: 425px;
