--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
+@import 'blocks/consultation';
 @import 'blocks/titles';
 @import 'base/media';
 
