--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,11 @@
     height: 50px;
     font-size: 16px;
   }
+  &_submit {
+    width: 100%;
+    height: 55px;
+    background-color: $main-color;
+    font-size: 16px;
+
+  }
 }
