--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,13 +5,15 @@
 @import 'blocks/advantages';
 @import 'blocks/consultation';
 @import 'blocks/titles';
+@import 'blocks/forms';
+@import 'blocks/carousel';
 @import 'base/media';
 
 * {
-  font-family: 'Museo Sans Cyrl',sans-serif;
+	font-family: 'Museo Sans Cyrl', sans-serif;
 }
 
-  .container { 
-    max-width: 950px;
-    margin: auto;}
-   
+.container {
+	max-width: 950px;
+	margin: auto;
+}
