--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -5,7 +5,7 @@
     width: 750px;
     margin: auto;
     }
-    .slick-prev, .slick-next {
+    .prev, .next {
       border: none;
       top: 50%;
       transform: translateY(-50%);
@@ -17,24 +17,27 @@
         height: 50px;
       }
     }
-    .slick-next {
+    .next {
       right: -66px;
       left: auto;
     }
 
-    .slick-dots {
-      display: flex;
-      margin: auto;
-      justify-content: center;
-      list-style-type: none;
-      font-size: 0;
+ 
+      .tns-item {
+        img {
+          display: block;
+          margin: auto;
+        }
+      }
+      .tns-nav {
+        display: flex;
+        margin: auto;
+        justify-content: center;
+        list-style-type: none;
+        font-size: 0;
       }
 
-      .slick-dots li {
-        margin: 0 15px;
-      }
-
-      .slick-dots button {
+      [aria-controls] {
         height: 17px;
         width: 17px;
         border-radius: 50%;
@@ -42,9 +45,12 @@
         border: 2px solid black;
       }
 
-      .slick-dots .slick-active button {
-       background-color: rgba(0, 0, 0, 1);
+      .tns-nav button {
+        margin: 0 10px;
       }
 
+      .tns-nav-active {
+        background-color: rgba(0, 0, 0, 1);
+      }
 }
 
