--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'blocks/titles';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
 @import 'base/media';
 
 * {
@@ -14,6 +15,7 @@
 }
 
 .container {
+  position: relative;
 	max-width: 950px;
 	margin: auto;
 }
