--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -36,6 +36,11 @@
   }
   &__content {
     margin-top: 60px;
+    display: none;
+    flex-wrap: wrap;
+    &_active {
+      display: flex;
+    }
   }
   &-item {
     width: 300px;
@@ -43,11 +48,13 @@
     border: solid 2px #e8e8e8;
     padding: 20px 20px 27px 20px;
     overflow: hidden;
+    margin: 0 8px 20px 8px;
     &__img {
       display: block;
       margin: auto;
       max-width: 100%;
       height: 200px;
+      
     }
     &__subtitle {
       margin-top: 20px;
@@ -70,6 +77,7 @@
       font-weight: 700;
       color: $main-color;
       text-align: center;
+      text-transform: uppercase;
       &:hover {
         color: $main-color;
       }
@@ -111,14 +119,49 @@
       }
     }
     &__list {
+      position: relative;
       width: 50%;
       margin-left: 20px;
       transform: translateX(0%);
       padding-right: 20px;
       transition: 0.5s;
+      padding-left: 19px;
+      margin-bottom: 0;
+      list-style-type: none;
+      &_item {
+        position: relative;
+        font-size: 14px;
+        font-weight: 300;
+        color: #555;
+        margin-bottom: 20px;
+        &:before {
+          content: '';
+          position: absolute; 
+          left: -14px;
+          top: 7px;
+          width: 5px;
+          height: 5px;
+          background-color: $main-color;
+        }
+      }
       &_active {
         transform: translateX(-100%);
         margin-left: 0px;
+      }
+    }
+    &__back {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(calc(-50% - 19px));
+      display: block;
+      font-weight: 500;
+      text-align: center;
+      color: #c70101;
+      text-transform: uppercase;
+      text-decoration: underline;
+      &:hover {
+        color: $main-color;
       }
     }
   }
