--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -137,12 +137,10 @@
 
 @media (max-width: 767px) {
 
-  .container {
-    max-width: 640px;
-  }
+
 
   .carousel .tns-item img {
-    width: 70%;
+    width: 80%;
   }
 
   .carousel [aria-controls] {
@@ -166,6 +164,7 @@
   .header {
     &__official {
       font-size: 13px;
+      margin-right: 20px;
       span {
         font-size: 15px;
       }
@@ -257,11 +256,12 @@
 
     .catalog__tabs {
       flex-direction: column;
+      margin-top: 20px;
     }
 
     .catalog__tab {
       margin-bottom: 15px;
-      width: 300px;
+      width: 290px;
       box-shadow: none;
     }
 
@@ -269,17 +269,87 @@
       margin-top: 5px;
     }
 
+    .feedback {
+
+      &__item {
+        img {
+          margin-top: 10px;
+        }
+        padding: 0 10px 0 10px;
+        &_text-wrapper {
+          margin-left: 22px;
+        }
+        &__descr {
+          font-size: 16 px;
+          line-height: 23px;
+        }
+        &_name {
+        margin-top: 10px;
+        }
+        &_first {
+          margin-top: 10px;
+        }
+        &_second {
+          margin-top: 50px;
+        }
+        &_third {
+          margin-top: 50px;
+        }
+      }
+    }
+
+
+
 }
 
 
 @media (max-width: 575px) {
+  
 
-  .container {
-    max-width: 450px;
+  .header {
+    flex-direction: column;
+    &__official {
+      margin-top: 60px;
+      margin-right: 0;
+      font-size: 23px;
+      span {
+        font-size: 28px;
+      }
+    }
+    &__contacts {
+      margin-top: 30px;
+    }
+    &__phone {
+      margin-top: 20px;
+      font-size: 22px;
+      font-weight: 700;
+      text-align: center;
+      padding: 0;
+    }
+    &__logo {
+      z-index: 1;
+      margin: auto;
+      width: 250px;
+    }
+    .button {
+      &__header {
+        display: block;
+        margin: auto;
+        margin-top: 3px;
+        height: 40px;
+        width: 180px;
+        font-weight: 700;
+        font-size: 15px;
+      }
+    }
+    }
+
+  .tns-outer {
+    margin-left: 5px;
   }
 
   .carousel .tns-item img {
-    width: 80%;
+    width: 90%;
   }
 
   .carousel [aria-controls] {
@@ -294,42 +364,6 @@
     .title {
       font-size: 30px;
     } 
-    .header {
-      flex-direction: column;
-      &__official {
-        margin-top: 60px;
-        font-size: 18px;
-        span {
-          font-size: 28px;
-        }
-      }
-      &__contacts {
-        margin-top: 30px;
-      }
-      &__phone {
-        margin-top: 20px;
-        font-size: 22px;
-        font-weight: 700;
-        text-align: center;
-        padding-right: 15px;
-      }
-      &__logo {
-        z-index: 1;
-        margin: auto;
-        width: 250px;
-      }
-      .button {
-        &__header {
-          display: block;
-          margin: auto;
-          margin-top: 3px;
-          height: 40px;
-          width: 180px;
-          font-weight: 700;
-          font-size: 15px;
-        }
-      }
-      }
     
   .promo {
     height: 780px;
@@ -351,7 +385,7 @@
     }
     &__header {
       margin: auto;
-      font-size: 19px;
+      font-size: 18px;
       text-align: center;
       }
   
@@ -428,39 +462,77 @@
   }
 }
 
-.title {
-  font-size: 30px;
-  &_left {
-    max-width: 500px;
-    font-size: 28px;
-    text-align: center;
-    margin: auto;
-  }
-}
+
 .consultation {
-  padding-top: 80px;
+  padding: 50px 0 20px 0;
+  min-height: 550px;
   &__descr {
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     margin-top: 20px;
-    line-height: 25px;
+    line-height: 20px;
   }
+  
   .feed-form {
     margin: auto;
     margin-top: 30px;
-    width: 310px;
+    width: 300px;
     input {
       height: 55px;
     }
 
   }
-
-
-
 }
+.title {
+  font-size: 28px;
+  &_left {
+    font-size: 22px;
+    text-align: center;
+  }
+}
+
 .button_submit {
-  max-width: 300px;
+  margin: auto;
+  max-width: 290px;
 }
+
+.catalog {
+  padding-bottom: 40px;
+}
+
+.feedback {
+
+  &__item {
+    img {
+      margin-top: 20px;
+    }
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &_text-wrapper {
+      margin: auto;
+      text-align: center;
+    }
+    &__descr {
+      font-size: 16px;
+      line-height: 23px;
+      width: 320px;
+    }
+    &_name {
+    margin-top: 10px;
+    }
+    &_first {
+      margin-top: 10px;
+    }
+    &_second {
+      margin-top: 50px;
+    }
+    &_third {
+      margin-top: 50px;
+    }
+  }
+}
+
 }
 
 @media (max-width: 360px) {
@@ -472,14 +544,6 @@
   }
 
 
-  .title {
-    font-size: 25px;
-    &_left {
-      font-size: 20px;
-      text-align: center;
-    }
-  }
-
   .header {
     &__logo {
       display: block;
@@ -487,18 +551,12 @@
       margin: auto;
     }
   }
-  .consultation {
-    &__descr {
-      text-align: center;
-      font-size: 18px;
-      margin-top: 20px;
-      line-height: 20px;
-    }
+
     .feed-form {
       margin: auto;
       margin-top: 30px;
       width: 280px;
     }
   }
-}
+
 
