--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -14,6 +14,7 @@
     font-weight: 500;
     text-align: center;
     color: #fff;
+    margin-right: 90px;
     span {
       display: block;
       font-size: 18px;
