--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,12 +4,9 @@
 
 .container {
   position: relative;
-	max-width: 950px;
+	max-width: 965px;
 	margin: auto;
 }
-
-
-
 
 @import 'base/variables';
 @import 'blocks/promo';
@@ -21,6 +18,7 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/feedback';
 @import 'base/media';
 
 
