--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,7 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/feedback';
+@import 'blocks/footer';
 @import 'base/media';
 
 
