--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import 'blocks/catalog';
 @import 'blocks/feedback';
 @import 'blocks/footer';
+@import 'blocks/modal';
 @import 'base/media';
 
 
