--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
+@import 'base/animations';
+
 * {
 	font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -21,6 +23,8 @@
 @import 'blocks/feedback';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
 @import 'base/media';
+
 
 
