--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -191,7 +191,7 @@
   }
 
   .promo {
-    background: url(./../../img/bgm.png) center (center/cover) no-repeat;
+    background: url(./../img/bgm.png) center (center/cover) no-repeat;
     width: 100%;
   }
   .button {
