--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -191,7 +191,7 @@
   }
 
   .promo {
-    background: url(./../img/bgm.png) center (center/cover) no-repeat;
+    background: url(../img/bgm.png) center (center/cover) no-repeat;
     width: 100%;
   }
   .button {
@@ -394,7 +394,7 @@
     height: 780px;
     position: relative;
     padding: 10px 15px 20px 15px;
-    background: url(./img/bgm.png) center (center/cover) no-repeat;
+    background: url(../img/bgm.png) center (center/cover) no-repeat;
     .logo__background {
       display: block;
       position: absolute;
