--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -82,13 +82,16 @@
   }
 
   .carousel [aria-controls] {
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
   }
 
-  .carousel .tns-nav button {
-    margin: 0 17px;
-  }
+  .carousel .tns-nav {
+    margin-top: 30px;
+    button {
+      margin: 0 17px;
+    }
+  } 
 
   .tns-outer {
     margin: auto;
@@ -146,11 +149,6 @@
 
   .carousel .tns-item img {
     width: 80%;
-  }
-
-  .carousel [aria-controls] {
-    height: 20px;
-    width: 20px;
   }
 
   .carousel .tns-nav button {
@@ -378,8 +376,8 @@
   }
 
   .carousel [aria-controls] {
-    height: 18px;
-    width: 18px;
+    height: 25px;
+    width: 25px;
   }
 
   .carousel .tns-nav button {
