--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,5 +1,5 @@
 .carousel {
-  padding: 81px 0 81px 0;
+  padding: 81px 0 50px 0;
   &__inner {
     position: relative;
     width: 750px;
@@ -39,8 +39,8 @@
       }
 
       [aria-controls] {
-        height: 17px;
-        width: 17px;
+        height: 20px;
+        width: 20px;
         border-radius: 50%;
         background-color: #fff;
         border: 2px solid black;
@@ -48,6 +48,7 @@
 
       .tns-nav button {
         margin: 0 10px;
+        margin-top: 15px;
       }
 
       .tns-nav-active {
