--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -323,6 +323,12 @@
         margin-bottom: 25px;
       }
     }
+
+    .pageup {
+      right: 20px;
+      bottom: 20px;
+    }
+
 }
 
 
@@ -627,8 +633,6 @@
   margin: auto;
 }
 }
-
-
 }
 
 
