--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,7 @@
+@import 'base/variables';
 @import 'base/animations';
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/fonst';
 
 * {
 	font-family: 'Museo Sans Cyrl', sans-serif;
@@ -10,7 +13,7 @@
 	margin: auto;
 }
 
-@import 'base/variables';
+
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
